--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +20,10 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+    roomVersion = '1.1.0-alpha1'
 }
 
 task clean(type: Delete) {
