--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.g81vdbvf.usermanager">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name = "android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -36,6 +36,13 @@
         <activity android:name=".ListUser">
             <intent-filter>
                 <action android:name="android.intent.action.LISTUSER" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".SpecificUser">
+            <intent-filter>
+                <action android:name="android.intent.action.SPECIFICUSER" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
