Falta implementar el boton de modificar usuario en SpecificUser, hecho eso lo que quedaría es hacer una interfaz land para todas las pantallas si fuese posible

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".SpecificUser">
+        <activity android:name=".SpecificUser"
+            android:parentActivityName="com.g81vdbvf.usermanager.ListUser">
             <intent-filter>
                 <action android:name="android.intent.action.SPECIFICUSER" />
 
