Añadida notificacion al insertar usuarios
Un poco de temas añadidos (mejorar interfaz)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,21 +19,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PantallaPrincipal">
+        <activity android:name=".PantallaPrincipal"
+            android:label="@string/option">
             <intent-filter>
                 <action android:name="android.intent.action.PRINCIPAL" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".InsertUser">
+        <activity android:name=".InsertUser"
+            android:label="@string/insert_user_principal">
             <intent-filter>
                 <action android:name="android.intent.action.INSERTUSER" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListUser">
+        <activity android:name=".ListUser"
+            android:label="@string/listed_users">
             <intent-filter>
                 <action android:name="android.intent.action.LISTUSER" />
 
@@ -42,7 +45,8 @@
         </activity>
         <activity
             android:name=".SpecificUser"
-            android:parentActivityName=".ListUser">
+            android:parentActivityName=".ListUser"
+            android:label="@string/specific_label">
             <intent-filter>
                 <action android:name="android.intent.action.SPECIFICUSER" />
 
@@ -50,7 +54,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ModUser"
-            android:parentActivityName=".ListUser">
+            android:parentActivityName=".ListUser"
+            android:label="@string/modify_label">
             <intent-filter>
                 <action android:name="android.intent.action.MODUSER" />
 
