--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_supervisor_account_white_36dp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -28,6 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".InsertUser"
+            android:parentActivityName=".PantallaPrincipal"
             android:label="@string/insert_user_principal">
             <intent-filter>
                 <action android:name="android.intent.action.INSERTUSER" />
