--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.google.android.gms:play-services-maps:12.0.1'
     // https://mvnrepository.com/artifact/net.zetetic/android-database-sqlcipher
-    implementation group: 'net.zetetic', name: 'android-database-sqlcipher', version: '3.5.9'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.9'
 }
